Add global settings importer